# IO_lab13

./: lab13.uml  lab13.~ml  zad13.txt
code_gen/: CMakeLists.txt  IObserver.cpp  TSubject.cpp  TTemperatureAction.cpp  TThermometer.cpp  main.cpp
code_gen#/: Client.cs  IObserver.cs  TSubject.cs  TTemperatureAction.cs  TThermometer.cs
code_gen/headers/: Client.h  IObserver.h  TSubject.h  TTemperatureAction.h  TThermometer.h
